Second attempt to fix overflow of resume slide.
- Change position of the content inside the iframe.

--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,7 @@ body {
     height: inherit;
 		width: inherit;
     overflow: inherit;
+    position: inherit;
 	}
 
   #slide-4 .resume-frame {
